--- a/app.html
+++ b/app.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <p id="mensaje"></p>
     <div class="container">
         <div class="paginas">
             <button id="Ensayo1">IEC 60879:2019</button>
@@ -92,6 +93,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <p id="mensaje"></p>
+    <script src="app.js"></script>
 </body>
 </html>
